Update styling and add Agronova emblem image - light theme, primary navbar with white text, fix gap between navbar and content

--- a/src/styles/Container.module.css
+++ b/src/styles/Container.module.css
@@ -1,6 +1,6 @@
 /* navbar */
 .nav {
-  @apply fixed top-0 z-40 flex w-full flex-row items-center justify-between px-[1rem] py-6 2xl:px-[8rem];
+  @apply fixed top-0 z-40 flex w-full flex-row items-center justify-between px-[1rem] py-3 2xl:px-[8rem];
 }
 .nav .desktop-nav {
   @apply hidden items-center space-x-5 text-center sm:flex;
